argocd/base/resources/routes/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - argo.cluster.local
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
